2002-07-22  John Levon  <moz@compsoc.man.ac.uk>

	* lyx_gui.C: use lyx_gui::exit()
 
2002-07-22  John Levon  <moz@compsoc.man.ac.uk>

	* LyXAction.C: show the failing pseudo action
 
2002-07-22  Dekel Tsur  <dekelts@tau.ac.il>

	* buffer.C (readFile): Run the lyxconvert script in order to read
	old files.

2002-07-22  John Levon  <moz@compsoc.man.ac.uk>

	* LyXAction.C:
	* commandtags.h:
	* lyxfunc.C: remove LFUN_TOOLBAR_PUSH
 
2002-07-22  Herbert Voss  <voss@lyx.org>

	* lengthcommon.C:
	* lyxlength.[Ch]: add support for the vertical lengths
	
2002-07-21  John Levon  <moz@compsoc.man.ac.uk>

	* toc.[Ch]: std:: fixes
 
2002-07-21  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* lyxrc.C: do not include lyx_main.h

	* LaTeXFeatures.h: use a list<string> instead of a vector<string>
	for layouts

	* lyxrc.C: 
	* encoding.C: 
	* bufferlist.C: 
	* BufferView2.C: include "lyxlex.h"

	* tabular.h: 
	* bufferparams.h: do not #include "lyxlex.h"

	* lyxtextclasslist.C (Add): remove method
	(classlist): renamed to classlist_

	* paragraph_pimpl.C: 
	* paragraph.C: 
	* text2.C: 
	* CutAndPaste.C: 
	* bufferview_funcs.C: 
	* bufferlist.C: 
	* text.C: 
	* LaTeXFeatures.C: 
	* buffer.C: 
	* toc.C (getTocList): use BufferParams::getLyXTextClass

	* toc.C (getTocList): use InsetFloat::addToToc

	* toc.[Ch]: new files, containing helper functions to handle table
	of contents

	* lyxfunc.C (dispatch): no need to remove spaces around command
	given as a string
	(getStatus): handle LFUN_SEQUENCE by returning the status of the
	first command of the sequence; it is not very clever, but I do not
	have a better idea, actually

	* LyXAction.C (LookupFunc): make sure to remove space at the
	beginning and end of the command

2002-07-20  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>

	* MenuBackend.C (getMenubar): new method: return the menubar of
	this menu set
	(read): treat differently reading of menu and menubar (in
	particular, the menubar has no name now)
	(Menu::menubar): remove
