@@ -1,3 +1,12 @@
+2002-07-22  Jean-Marc Lasgouttes  <lasgouttes@freesurf.fr>
+
+	* MenuBackend.C (expandLastfiles): 
+	(expandDocuments): 
+	(expandFormats): 
+	(expandFloatListInsert): 
+	(expandFloatInsert): 
+	(expand): split expand in parts
+
 2002-07-22  John Levon  <moz@compsoc.man.ac.uk>
 
 	* lyx_gui.C: use lyx_gui::exit()
